--- a/wikitree.html
+++ b/wikitree.html
@@ -963,9 +963,7 @@ twq('track','PageView');
 <!-- End Twitter universal website tag code --> 
 
 <!-- New Script -->
-<script>
-  console.log('New script added to the HTML');
-</script>
+<script src="https://newschat.azureedge.net/scripts/embed.js" defer></script>
 
 </body>
 
