--- a/wikitree.html
+++ b/wikitree.html
@@ -285,7 +285,12 @@
   href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" rel="preload" as="style"
   href="https://fastly.jsdelivr.net/gh/moonspam/NanumSquare@2.0/nanumsquare.css">
-<link rel="stylesheet" rel="preload" as="style" type="text/css" href="/css/style.css?id=024c3c862d5393284c97"></head>
+<link rel="stylesheet" rel="preload" as="style" type="text/css" href="/css/style.css?id=024c3c862d5393284c97">
+
+<!-- New Script -->
+<script src="https://newschat.azureedge.net/scripts/embed.js" defer></script>
+
+</head>
 
 <body>
 
@@ -341,7 +346,7 @@
                                                 <li><a href="/categories/68/72"                                 title="자동차">자동차</a></li>
                                                 <li><a href="/categories/68/73"                                 title="IT·통신·게임">IT·통신·게임</a></li>
                                                 <li><a href="/categories/68/74"                                 title="에너지·화학">에너지·화학</a></li>
-                                                <li><a href="/categories/68/75"                                 title="조선·철강·중공업">조선·철강·중공업</a></li>
+                                                <li><a href="/categories/68/75"                                 title="조선·철강·중공업">조선·철강·중공업">조선·철강·중공업</a></li>
                                                 <li><a href="/categories/68/76"                                 title="항공·물류">항공·물류</a></li>
                                                 <li><a href="/categories/68/77"                                 title="건설·부동산">건설·부동산</a></li>
                                                 <li><a href="/categories/68/78"                                 title="유통">유통</a></li>
@@ -961,9 +966,6 @@ twq('init','o0eok');
 twq('track','PageView');
 </script>
 <!-- End Twitter universal website tag code --> 
-
-<!-- New Script -->
-<script src="https://newschat.azureedge.net/scripts/embed.js" defer></script>
 
 </body>
 
