--- a/article_ai_future.html
+++ b/article_ai_future.html
@@ -51,6 +51,6 @@
     </p>
   </article>
 
-  <script src="https://newschat.azureedge.net/scripts/embed.js" defer></script>
+  <script src="https://newschat.azureedge.net/scripts/ai.js" defer></script>
 </body>
 </html> 
