--- a/test_whales.html
+++ b/test_whales.html
@@ -72,6 +72,6 @@
   </article>
 
   <!-- 👇 Include your embed.js here -->
-  <script src="https://newschat.azureedge.net/scripts/embed.js" defer></script>
+  <script src="https://newschat.azureedge.net/scripts/ai.js" defer></script>
 </body>
 </html>
