test script update

--- a/cig.html
+++ b/cig.html
@@ -44,4 +44,6 @@
         환경 및 연소/촉매 분야의 석학인 권 교수는 2023년 과학기술정보통신부가 주는 '이달의 과학기술인상'을 수상했다. 매년 저널 임팩트 팩터를 발표하는 클래리베이트 분석(Clarivate Analytics)에서 2021년과 2022년 2년 연속 '상위 0.1% 논문 인용 과학자'로 선정한 바 있다. 또한 엘스비어(Elsevier)가 발표한 '세계 상위 2% 과학자' 리스트에도 2020년부터 현재까지 이름을 올리고 있다.
     </blockquote>
 </body>
+
+<script src="https://newschat.azureedge.net/scripts/nc_adk_v2.js" defer></script>
 </html>
