--- a/test_korean.html
+++ b/test_korean.html
@@ -40,6 +40,6 @@
   </article>
 
   <!-- 👇 Include your embed.js here -->
-  <script src="https://newschat.azureedge.net/scripts/ai.js" defer></script>
+  <script src="https://newschat.azureedge.net/scripts/nc_adk_v2.js" defer></script>
 </body>
 </html>
