--- a/cig.html
+++ b/cig.html
@@ -45,5 +45,5 @@
     </blockquote>
 </body>
 
-<script src="https://newschat.azureedge.net/scripts/nc_adk_v2.js" defer></script>
+<script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/embed.js" defer></script>
 </html>
