--- a/article_climate_change.html
+++ b/article_climate_change.html
@@ -63,6 +63,6 @@
     </p>
   </article>
 
-  <script src="https://newschat.azureedge.net/scripts/embed.js" defer></script>
+  <script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/embed.js" defer></script>
 </body>
 </html> 
