--- a/article_seaweed.html
+++ b/article_seaweed.html
@@ -56,6 +56,6 @@
     </p>
   </article>
 
-  <script src="https://newschat.azureedge.net/scripts/embed_affiliate.js" defer></script>
+  <script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/embed.js" defer></script>
 </body>
 </html> 
