--- a/article_korean_food.html
+++ b/article_korean_food.html
@@ -85,6 +85,6 @@
     </p>
   </article>
 
-  <script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/embed.js" defer></script>
+  <script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/nc_adk_v2.js" defer></script>
 </body>
 </html> 
