--- a/test copy.html
+++ b/test copy.html
@@ -45,6 +45,6 @@
   </article>
 
   <!-- 👇 Include your embed.js here -->
-  <script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/embed.js" defer></script>
+  <script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/nc_adk_v2.js" defer></script>
 </body>
 </html>
