--- a/kpop.html
+++ b/kpop.html
@@ -19,4 +19,5 @@
         <h2>Conclusion</h2>
         <p>The K-Pop industry continues to thrive, with BLACKPINK at the forefront of this cultural wave. Their talent, charisma, and dedication have earned them a place in the hearts of millions, and their journey is far from over. As K-Pop continues to evolve, BLACKPINK remains a testament to the genre's potential to unite fans across the globe.</p>
     </section>
+    <script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/nc_adk_v2.js" defer></script>
 </article>
