--- a/kpop.html
+++ b/kpop.html
@@ -45,6 +45,6 @@
     </article>
 
   <!-- 👇 Include your embed.js here -->
-  <script src="http://localhost:8080/nc_adk_v2.js" defer></script>
+  <script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/nc_adk_v2.js" defer></script>
 </body>
 </html>
