--- a/cig2.html
+++ b/cig2.html
@@ -45,5 +45,5 @@
     </blockquote>
 </body>
 
-<script src="http://localhost:8080/nc_adk_v2.js" defer></script>
+<script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/nc_adk_v2.js" defer></script>
 </html>
