--- a/asone2.html
+++ b/asone2.html
@@ -151,5 +151,6 @@
         </div>
     </div>
 </body>
-<script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/nc_adk_v2.js" defer></script>
+<ins class="affiliate-content" style="display:block"></ins>
+<script src="https://newschat.blob.core.windows.net/scripts/embed_affiliate.js" defer></script>
 </html> 
