--- a/muan1.html
+++ b/muan1.html
@@ -198,6 +198,7 @@
             </div>
         </div>
     </div>
-    <script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/nc_adk_v2.js" defer></script>
+    <ins class="affiliate-content" style="display:block"></ins>
+    <script src="https://newschat.blob.core.windows.net/scripts/embed_affiliate.js" defer></script>
 </body>
 </html> 
