--- a/cig2.html
+++ b/cig2.html
@@ -46,5 +46,5 @@
 </body>
 
 <ins class="affiliate-content" style="display:block"></ins>
-<script src="https://newschat.blob.core.windows.net/scripts/embed_affiliate.js" defer></script>
+<script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/embed_affiliate.js" defer></script>
 </html>
