--- a/muan1.html
+++ b/muan1.html
@@ -198,7 +198,7 @@
             </div>
         </div>
     </div>
-    <ins class="affiliate-content" style="display:block"></ins>
+    <ins class="affiliate-content" data-ai-sdk style="display:block"></ins>
     <script src="https://newschat.blob.core.windows.net/scripts/embed_affiliate.js" defer></script>
 </body>
 </html> 
