--- a/asone2.html
+++ b/asone2.html
@@ -150,7 +150,7 @@
             </div>
         </div>
     </div>
+    <ins class="affiliate-content" data-ai-sdk style="display:block"></ins>
+    <script src="https://newschat.blob.core.windows.net/scripts/embed_affiliate.js" defer></script>
 </body>
-<ins class="affiliate-content" style="display:block"></ins>
-<script src="https://newschat.blob.core.windows.net/scripts/embed_affiliate.js" defer></script>
 </html> 
