--- a/sports1.html
+++ b/sports1.html
@@ -45,6 +45,6 @@
     </article>
 
   <!-- 👇 Include your embed.js here -->
-  <script src="https://newschat.azureedge.net/scripts/nc_adk_v2.js" defer></script>
+  <script src="https://newschat.azureedge.net/scripts/embed.js" defer></script>
 </body>
 </html>
