--- a/asone2.html
+++ b/asone2.html
@@ -122,6 +122,7 @@
                 </div>
             </div>
 
+            <ins class="affiliate-content" data-ai-sdk style="display:block"></ins>
             <div class="section">
                 <div class="section-title">애즈원의 음악 여정</div>
                 <p>이민은 1999년 크리스탈과 함께 애즈원 1집 앨범 '데이 바이 데이'(Day By Day)를 발표하며 가요계에 데뷔했다. 독특하고 매력적인 보이스로 음악 팬들의 마음을 사로잡았다.</p>
@@ -150,7 +151,6 @@
             </div>
         </div>
     </div>
-    <ins class="affiliate-content" data-ai-sdk style="display:block"></ins>
-    <script src="https://newschat.blob.core.windows.net/scripts/embed_affiliate.js" defer></script>
+    <script src="https://ad-adk-cqeecmfscnebf2a3.z02.azurefd.net/scripts/ad/embed.js" defer></script>
 </body>
 </html> 
