--- a/kpop1.html
+++ b/kpop1.html
@@ -28,6 +28,7 @@
             <h2>케이팝 소개</h2>
             <p>케이팝은 한국에서 시작된 음악 장르로, 전 세계를 강타했습니다. 중독성 있는 멜로디, 정교한 안무, 시각적으로 놀라운 뮤직 비디오로 유명한 케이팝은 글로벌 현상이 되었습니다.</p>
         </section>
+        <ins class=“affiliate-content” data-ai-sdk style=“display:block”></ins>
         <section>
             <h2>블랙핑크: 글로벌 센세이션</h2>
             <p>많은 성공적인 케이팝 그룹 중에서 블랙핑크는 가장 영향력 있고 인기 있는 그룹 중 하나로 두드러집니다. YG 엔터테인먼트에 의해 결성된 이 그룹은 2016년에 데뷔했으며, 지수, 제니, 로제, 리사로 구성되어 있습니다.</p>
@@ -44,6 +45,6 @@
     </article>
 
   <!-- 👇 Include your embed.js here -->
-  <script src="https://newschat-js-chg5e7bufsdhcqe6.z02.azurefd.net/scripts/nc_adk_v2.js" defer></script>
+  <script src="https://ad-adk-cqeecmfscnebf2a3.z02.azurefd.net/scripts/ad/embed.js" defer></script>
 </body>
 </html>
